# oraculo-nueva-eternia

./: .antigravityignore  .dockerignore  .env.example  .gitattributes  .gitignore  Apuntes a llevar a cabo.txt  Dockerfile  LOG_MAESTRO_NUEVA_ETERNIA.md  ORACULO_ETERNIA.md.resolved  Oraculo.lnk  PLAN_IMPLEMENTACION.md  PROMPT_MAESTRO_MIGRACION.md.resolved  PROMPT_PLANTILLA_MEJORADO.md.resolved  README.md  alembic.ini  amazon_diagnostic.html  audit_db.py  audit_ebay_html.py  audit_supabase.py  audit_wallapop_fields.py  backup_db.ps1  brain.rs  check_cloud_size.py  check_collection_counts.py  check_db.py  check_db_users.py  check_global_stats.py  check_local_product_cols.py  check_local_users.py  check_products.py  check_scoring.py  check_scrapers.py  check_users.py  cleanup_scrapers.py  create_backup_shortcut.ps1  create_desktop_shortcut.ps1  dependency_audit.txt  diagnose_amazon.py  diagnose_amazon_v2.py  diagnose_idealo.py  (+69 more)
.3ox/: Cargo.toml  brains.rs  limits.toml  routes.json  sparkfile.md  test.rs  tools.yml
.agents/: AGENTS.md
.claude/: launch.json
.devcontainer/: devcontainer.json
chrome-extension/: README.md  content.css  content.js  manifest.json  popup.html  popup.js
data/: actiontoys_eval.json  dump_dvd_titles.json  electropolis_eval.json  fantasy_eval.json  frikiverso_eval.json  pixelatoy_eval.json  products_snapshot.json  profile_dvdstorespain.json  profile_frikiverso.json  profile_pixelatoy.json  snippet_actiontoys.html
deploy/: OCI_DEPLOYMENT_GUIDE.md  duckdns_update.sh  setup_server.sh
dev_tools/: analyze_411_structure.py  analyze_fantasia.py  (+41 more)
(+879 files in other folders)
